Bug 65226 - [llvmpipe] st_mesa_to_tgsi.c:1133:st_translate_mesa_program: Assertion `program->NumAddressRegs == 1' failed.
Summary: [llvmpipe] st_mesa_to_tgsi.c:1133:st_translate_mesa_program: Assertion `progr...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: have-backtrace, regression
Depends on:
Blocks:
 
Reported: 2013-06-01 01:28 UTC by Vinson Lee
Modified: 2013-06-04 19:37 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-06-01 01:28:16 UTC
mesa: 869c5d438f137b2c6b9aec1dddc00bfa64f36621 (master)

Run piglit vp-address-02 on llvmpipe.

$ ./bin/vp-address-02 -auto
src/mesa/state_tracker/st_mesa_to_tgsi.c:1133:st_translate_mesa_program: Assertion `program->NumAddressRegs == 1' failed.
Trace/breakpoint trap (core dumped)

(gdb) bt
#0  0x00007f86655b6ba6 in _debug_assert_fail (expr=0x7f8666104f9f "program->NumAddressRegs == 1", 
    file=0x7f8666104aa8 "src/mesa/state_tracker/st_mesa_to_tgsi.c", line=1133, function=0x7f8666105040 "st_translate_mesa_program")
    at src/gallium/auxiliary/util/u_debug.c:278
#1  0x00007f86654c5ccf in st_translate_mesa_program (ctx=0x16baac0, procType=1, ureg=0x1802160, program=0x17f1b40, numInputs=2, 
    inputMapping=0x1801ef8, inputSemanticName=0x0, inputSemanticIndex=0x0, interpMode=0x0, numOutputs=2, outputMapping=0x1802000, 
    outputSemanticName=0x18020dc "", outputSemanticIndex=0x1802113 "", passthrough_edgeflags=0 '\000', clamp_color=0 '\000')
    at src/mesa/state_tracker/st_mesa_to_tgsi.c:1133
#2  0x00007f86653d32c2 in st_translate_vertex_program (st=0x1710520, stvp=0x17f1b40, key=0x7fff83643f50) at src/mesa/state_tracker/st_program.c:355
#3  0x00007f86653d3482 in st_get_vp_variant (st=0x1710520, stvp=0x17f1b40, key=0x7fff83643f50) at src/mesa/state_tracker/st_program.c:426
#4  0x00007f8665499bbb in update_vp (st=0x1710520) at src/mesa/state_tracker/st_atom_shader.c:152
#5  0x00007f866549443e in st_validate_state (st=0x1710520) at src/mesa/state_tracker/st_atom.c:201
#6  0x00007f86654a0a9d in st_Clear (ctx=0x16baac0, mask=2) at src/mesa/state_tracker/st_cb_clear.c:395
#7  0x00007f866540a55e in _mesa_Clear (mask=16384) at src/mesa/main/clear.c:203
#8  0x00007f8668024fb3 in stub_glClear (mask=16384) at piglit/tests/util/generated_dispatch.c:1798
#9  0x0000000000401114 in piglit_display () at piglit/tests/shaders/vp-address-02.c:95
#10 0x00007f8668021060 in display () at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:60
#11 0x00007f86677ce137 in fghRedrawWindow (window=0x1647090) at freeglut_main.c:210
#12 fghcbDisplayWindow (window=0x1647090, enumerator=0x7fff836441b0) at freeglut_main.c:227
#13 0x00007f86677d1889 in fgEnumWindows (enumCallback=0x7f86677ce0d0 <fghcbDisplayWindow>, enumerator=0x7fff836441b0) at freeglut_structure.c:394
#14 0x00007f86677ce5fa in fghDisplayAll () at freeglut_main.c:249
#15 glutMainLoopEvent () at freeglut_main.c:1450
#16 0x00007f86677cef05 in glutMainLoop () at freeglut_main.c:1498
#17 0x00007f8668021295 in run_test (gl_fw=0x7f86682fdf40, argc=1, argv=0x7fff83644578)
    at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:142
#18 0x00007f866801f37e in piglit_gl_test_run (argc=1, argv=0x7fff83644578, config=0x7fff83644460)
    at piglit/tests/util/piglit-framework-gl.c:127
#19 0x00000000004010de in main (argc=2, argv=0x7fff83644578) at piglit/tests/shaders/vp-address-02.c:63
(gdb) frame 1
#1  0x00007f86654c5ccf in st_translate_mesa_program (ctx=0x16baac0, procType=1, ureg=0x1802160, program=0x17f1b40, numInputs=2, 
    inputMapping=0x1801ef8, inputSemanticName=0x0, inputSemanticIndex=0x0, interpMode=0x0, numOutputs=2, outputMapping=0x1802000, 
    outputSemanticName=0x18020dc "", outputSemanticIndex=0x1802113 "", passthrough_edgeflags=0 '\000', clamp_color=0 '\000')
    at src/mesa/state_tracker/st_mesa_to_tgsi.c:1133
1133	      debug_assert( program->NumAddressRegs == 1 );
(gdb) print program->NumAddressRegs
$1 = 2

614ee25077b7ffafeb87b22563d01856824fb4bc is the first bad commit
commit 614ee25077b7ffafeb87b22563d01856824fb4bc
Author: Marek Olšák <maraeo@gmail.com>
Date:   Thu May 2 02:38:43 2013 +0200

    st/mesa: initialize all program constants and UBO limits
    
    Also simplify UBO support checking.
    
    NOTE: This is a candidate for the 9.1 branch.
    
    Reviewed-by: Brian Paul <brianp@vmware.com>

:040000 040000 43469d74b142c9f8cc68e07142a952dd73c6298d bd3bffda50371f7e9f646dda596077eb828ec3be M	src
bisect run success
Comment 1 Brian Paul 2013-06-04 16:47:05 UTC
This test used to be skipped.  We're mistakenly reporting support for more than one address register, when Mesa doesn't really handle that.  I'm posting a patch to mesa-dev...
Comment 2 Brian Paul 2013-06-04 19:37:13 UTC
Fixed with mesa commit f270baf074d1526beb49d0fbc2175cf02344a5b9


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.